--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodejs ./bin/www"
+    "start": "node index",
+    "dev": "node-dev index"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "express": "^4.16.3",
+    "http-errors": "~1.6.2",
+    "jade": "~1.3.0",
+    "mongoose": "^5.2.14",
+    "morgan": "~1.0.0",
+    "node-dev": "^3.1.3",
+    "static-favicon": "~1.0.0"
   }
 }
