--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dotenv-extended": "^2.3.0",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "jade": "~1.3.0",
