--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
+    "cors": "^2.8.4",
     "debug": "~0.7.4",
     "dotenv-extended": "^2.3.0",
     "express": "^4.16.3",
